tests/testdata/run/error_022_stack_custom_error.ts.out
[WILDCARD]CustomError: custom error
    at [WILDCARD]/error_022_stack_custom_error.ts:[WILDCARD]
error: Uncaught (in promise) CustomError: custom error
const error = new CustomError();
              ^
    at [WILDCARD]/error_022_stack_custom_error.ts:[WILDCARD]
